<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".view.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.089" />

    <TextView
        android:id="@+id/txtBimestre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/seg_bimestre"
        tools:layout_editor_absoluteX="162dp"
        tools:layout_editor_absoluteY="90dp" />

    <TextView
        android:id="@+id/txtNotaProva"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/edNotaProva"
        android:layout_marginTop="92dp"
        android:text="@string/notaProva" />

    <TextView
        android:id="@+id/txtMateria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/edMateria"
        android:layout_alignTop="@+id/txtNotaProva"
        android:text="Materia" />

    <TextView
        android:id="@+id/txtNotaTrabalho"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/edNotaTrabalho"
        android:layout_alignTop="@+id/txtNotaProva"
        android:text="Nota Trabalho" />

    <EditText
        android:id="@+id/edMateria"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="130dp"
        android:ems="10"
        android:hint="Matéria"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/edNotaProva"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/edMateria"
        android:layout_marginEnd="116dp"
        android:ems="10"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/edNotaTrabalho"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/edMateria"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/txtMedia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/txtMateria"
        android:layout_marginTop="191dp"
        android:text="@string/media" />

    <TextView
        android:id="@+id/txtSituacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/txtNotaProva"
        android:layout_alignTop="@+id/txtMedia"
        android:text="@string/situacao" />

    <TextView
        android:id="@+id/txtResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/txtMateria"
        android:layout_marginTop="222dp"
        android:text=""/>

    <TextView
        android:id="@+id/txtSituacaoFinal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/txtNotaProva"
        android:layout_alignTop="@+id/txtResultado"
        android:text=""/>

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/edNotaTrabalho"
        android:layout_alignTop="@+id/txtMedia"
        android:text="@string/btnCalcular" />

    <!--<Button-->
        <!--android:id="@+id/btnGravar"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentStart="true"-->
        <!--android:layout_below="@+id/txtResultado"-->
        <!--android:layout_marginTop="70dp"-->
        <!--android:background="@drawable/btn_customizado"-->
        <!--android:text="@string/btnGravar" />-->

</RelativeLayout>